Corrections to awakening factors lists in DA

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -223,7 +223,7 @@ The monks accepted his instructions and listened.
 65\. “What are seven things to be achieved? The seven kinds of wealth: wealth in faith, wealth in precepts, wealth in conscience, wealth in modesty, wealth in learning, wealth in generosity, and wealth in wisdom are the seven kinds of wealth.
 {:#p65}
 
-66\. “What are seven things to be cultivated? The seven awakenings: Here, a monk cultivates the awakening of mindfulness, which depends on being desireless, tranquil, and secluded. He cultivates the teaching … cultivates effort … cultivates joy … cultivates mildness … cultivates <em>samādhi</em> … cultivates equanimity, which depends on being desireless, tranquil, and secluded.
+66\. “What are seven things to be cultivated? The seven factors of awakening: Here, a monk cultivates the awakening factor of mindfulness, which depends on being desireless, tranquil, and secluded. He cultivates [analyzing] the teachings … cultivates effort … cultivates joy … cultivates calm … cultivates <em>samādhi</em> … cultivates equanimity, which depends on being desireless, tranquil, and secluded.
 {:#p66}
 
 67\. “What are seven things to be recognized? The seven dwelling places of awareness: There are sentient beings of diverse bodies and diverse notions. These gods and humans are the first abode of awareness. Again, there are sentient beings of diverse bodies but the same notions. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of awareness. Again, there are sentient beings of the same bodies but diverse notions. These Ābhāsvara gods are the third abode of awareness. Again, there are sentient beings of the same bodies and the same notions. These Śubhakṛtsnā gods are the fourth abode of awareness. Again, there are sentient beings that dwell in the abode of space. This is the fifth abode of awareness. Some dwell in the abode of awareness. This is the sixth abode of awareness. Some are in the abode of nothingness. This is the seventh abode of awareness.
