--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -63,7 +63,7 @@ next: DA_13.html
   </tr>
   <tr>
     <td class='ch' title='t1.1.59b29'>「云何二法趣向涅槃？ 一謂為止，二謂為觀。</td>
-    <td id='p10'>10. “What are two things that lead to <em>nirvāṇa</em>? The first is calmness, and the second in contemplation.<sup id="ref3"><a href="#n3">3</a></sup></td>
+    <td id='p10'>10. “What are two things that lead to <em>nirvāṇa</em>? The first is calmness, and the second is contemplation.<sup id="ref3"><a href="#n3">3</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t1.1.59c1'>「復有三法趣向惡趣，三法向善趣，三法向涅槃。</td>
@@ -79,7 +79,7 @@ next: DA_13.html
   </tr>
   <tr>
     <td class='ch' title='t1.1.59c5'>「云何三法趣向涅槃？ 謂三三昧： 空三昧、無相三昧、無作三昧。</td>
-    <td id='p14'>14. “What are three things that lead to <em>nirvāṇa</em>? They are the three <em>samādhi</em>s: The <em>samādhi</em> of emptiness, the <em>samādhi</em> of no signs, and the <em>samādhi</em> of no actions.<sup id="ref4"><a href="#n4">4</a></sup></td>
+    <td id='p14'>14. “What are three things that lead to <em>nirvāṇa</em>? They are the three <em>samādhi</em>s: The <em>samādhi</em> of emptiness, <em>samādhi</em> of no signs, and <em>samādhi</em> of no actions.<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t1.1.59c6'>「又有四法趣向惡趣，四法向善趣，四法向涅槃。</td>
