--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -59,7 +59,7 @@ He replied, “I don’t know them.”
 
 “This teaching is unsurpassed, and nothing goes beyond it. His wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could any arise who surpass him?
 
-13\. “The Dharma that the Tathāgata teaches has another superiority, which is the path. The path refers to this: Ascetics and priests use the various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they cultivate the awakening factor of mindfulness, which relies on [the lack of] desire, relies on seclusion [from desire], relies on extinguishment [of desire], and relies on the escape [from desire] … they cultivate the awakening factor of the teachings … effort … joy … calm … samādhi … equanimity, which relies on [the lack of] desire, relies on seclusion, relies on extinguishment, and relies on the escape.
+13\. “The Dharma that the Tathāgata teaches has another superiority, which is the path. The path refers to this: Ascetics and priests use the various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they cultivate the awakening factor of mindfulness, which relies on [the lack of] desire, relies on seclusion [from desire], relies on extinguishment [of desire], and relies on the escape [from desire] … they cultivate the awakening factor of [analyzing] the teachings … effort … joy … calm …  <em>samādhi</em> … equanimity, which relies on [the lack of] desire, relies on seclusion, relies on extinguishment, and relies on the escape.
 {:#p13}
 
 “This teaching is unsurpassed, and nothing goes beyond it. His wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could any arise who surpass him?
@@ -76,30 +76,30 @@ He replied, “I don’t know them.”
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
 
-17\. “The Dharma that the Tathāgata teaches has another superiority, which is his attainments of vision.  The attainments of vision refer to this: Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they visualize their head to their toes and observe their toes to their head. Inside and outside of their skin, there’s only impure hair, nails, the five organs of liver, lungs, stomach, spleen, and kidneys, sweat, fat, marrow, brain, feces, urine, tears, and foul-smelling places of impurity. Not one of them is desirable. This is the first attainment of vision.
+17\. “The Dharma that the Tathāgata teaches has another superiority, which is his attainments of vision.  The attainments of vision refer to this: Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they visualize their head to their toes and observe their toes to their head. Inside and outside of their skin, there’s only impure hair, nails, the five organs of liver, lungs, stomach, spleen, and kidneys, sweat, fat, marrow, brain, feces, urine, tears, and foul-smelling places of impurity. Not one of them is desirable. This is the first attainment of vision.
 {:#p17}
 
-18\. “Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they visualize the removal of the external impurities of skin and muscle and only visualize white bones and teeth. This is the second attainment of vision.
+18\. “Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they visualize the removal of the external impurities of skin and muscle and only visualize white bones and teeth. This is the second attainment of vision.
 {:#p18}
 
-19\. “Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they visualize the removal of the external impurities of skin, muscle, and white bones. They only visualize where their mind and consciousness dwell. Where does it exist in the present life? Where will it exist in a later life? If it’s not ended in the present life and not ended in the later life, then it’s not freed in the present life and not freed in the later life. This is the third attainment of vision.
+19\. “Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they visualize the removal of the external impurities of skin, muscle, and white bones. They only visualize where their mind and consciousness dwell. Where does it exist in the present life? Where will it exist in a later life? If it’s not ended in the present life and not ended in the later life, then it’s not freed in the present life and not freed in the later life. This is the third attainment of vision.
 {:#p19}
 
-20\. “Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they visualize the removal of the external impurities of skin, muscle, and white bones. Once again, they investigate consciousness. Consciousness will be in a later life and not exist in the present life. The present life ended, but the later life won’t have ended. It’ll be freed from the present life but not freed from the later life. This is the fourth attainment of vision.
+20\. “Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they visualize the removal of the external impurities of skin, muscle, and white bones. Once again, they investigate consciousness. Consciousness will be in a later life and not exist in the present life. The present life ended, but the later life won’t have ended. It’ll be freed from the present life but not freed from the later life. This is the fourth attainment of vision.
 {:#p20}
 
-21\. “Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they visualize the removal of the external impurities of skin and muscle and then remove the white bones. Once again, they investigate consciousness. It doesn’t exist in the present life and doesn’t exist in the later life. When both are ended, then it’s freed from both. This is the fifth attainment of vision.
+21\. “Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they visualize the removal of the external impurities of skin and muscle and then remove the white bones. Once again, they investigate consciousness. It doesn’t exist in the present life and doesn’t exist in the later life. When both are ended, then it’s freed from both. This is the fifth attainment of vision.
 {:#p21}
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
 
-22\. “The Dharma that the Tathāgata teaches has another superiority, which is his explanation of eternalism. Eternalism refers to this: Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they recollect twenty eons of formation and destruction. They say, ‘The world is eternal. This is true; anything else is false. Why is that? From my recollection, I know there have been these eons of formation and destruction. I don’t know about anything further in the past, nor do I know about future eons of formation and destruction.’ This person speaks without knowledge morning and night, ‘The world is eternal. Only this is true; anything else is false.’ This is the first form of eternalism.
+22\. “The Dharma that the Tathāgata teaches has another superiority, which is his explanation of eternalism. Eternalism refers to this: Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they recollect twenty eons of formation and destruction. They say, ‘The world is eternal. This is true; anything else is false. Why is that? From my recollection, I know there have been these eons of formation and destruction. I don’t know about anything further in the past, nor do I know about future eons of formation and destruction.’ This person speaks without knowledge morning and night, ‘The world is eternal. Only this is true; anything else is false.’ This is the first form of eternalism.
 {:#p22}
 
-23\. “Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they recollect forty eons of formation and destruction. They then say, ‘The world is eternal. This is true; anything else is false. Why is that? From my recollection, I know there have been these eons of formation and destruction. I could go beyond this knowledge of past eons of formation and destruction, but don’t I know about future eons of formation and destruction.’ This person speaks without knowledge morning and night, ‘The world is eternal. Only this is true; anything else is false.’ This is the second form of eternalism.
+23\. “Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they recollect forty eons of formation and destruction. They then say, ‘The world is eternal. This is true; anything else is false. Why is that? From my recollection, I know there have been these eons of formation and destruction. I could go beyond this knowledge of past eons of formation and destruction, but don’t I know about future eons of formation and destruction.’ This person speaks without knowledge morning and night, ‘The world is eternal. Only this is true; anything else is false.’ This is the second form of eternalism.
 {:#p23}
 
-24\. “Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they recollect eighty eons of formation and destruction. They say, ‘The world is eternal. [This is true;] anything else is false. Why is that? From my recollection, I know there have been these eons of formation and destruction. I could go beyond this knowledge of past eons of formation and destruction, and I fully know about future eons of formation and destruction.’ This person speaks without knowledge morning and night, ‘The world is eternal. Only this is true; anything else is false.’ This is the third form of eternalism.
+24\. “Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they recollect eighty eons of formation and destruction. They say, ‘The world is eternal. [This is true;] anything else is false. Why is that? From my recollection, I know there have been these eons of formation and destruction. I could go beyond this knowledge of past eons of formation and destruction, and I fully know about future eons of formation and destruction.’ This person speaks without knowledge morning and night, ‘The world is eternal. Only this is true; anything else is false.’ This is the third form of eternalism.
 {:#p24}
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
@@ -113,7 +113,7 @@ He replied, “I don’t know them.”
 27\. “Some ascetics and priests examine it not using their perceptions, nor do they listen to gods or non-humans. They examine themselves, or they listen to someone else, and they claim, ‘Thus is your mind; thus is your mind.’ This is also sometimes true and sometimes false. This is the third examination.
 {:#p27}
 
-28\. “Some ascetics and priests examine it not using perception, don’t listen to gods or non-humans, nor is it their own or another’s examination themselves. After eliminating perception and examination, they attain a fixed state of samādhi. Examining another’s mind, they say, ‘Thus is your mind; thus is your mind.’ Such examination is true. This is the fourth examination.
+28\. “Some ascetics and priests examine it not using perception, don’t listen to gods or non-humans, nor is it their own or another’s examination themselves. After eliminating perception and examination, they attain a fixed state of  <em>samādhi</em>. Examining another’s mind, they say, ‘Thus is your mind; thus is your mind.’ Such examination is true. This is the fourth examination.
 {:#p28}
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
@@ -142,12 +142,12 @@ He replied, “I don’t know them.”
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
 
-35\. “The Dharma that the Tathāgata teaches has another superiority, which is the direct knowledge of one’s own past lives. Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi, they recollect innumerable events of their own past lives: One birth, two births … a hundred thousand births, an eon of formation, or an eon of destruction. ‘Thus were my innumerable birth places. My names were thus. My castes and clans were thus. My life spans were thus. My meals were thus. My pains and pleasures were thus. I was born there from here, and I was born here from there .’ Whatever various aspects there were, they recollect their own past lives and the events of innumerable eons. Day and night, they’re constantly aware of past times they’ve passed through. ‘Here was form. Here was formlessness. Here was conception. Here was no conception. Here there was neither [conception nor] no conception.’ They fully recollect and fully know it.
+35\. “The Dharma that the Tathāgata teaches has another superiority, which is the direct knowledge of one’s own past lives. Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em>, they recollect innumerable events of their own past lives: One birth, two births … a hundred thousand births, an eon of formation, or an eon of destruction. ‘Thus were my innumerable birth places. My names were thus. My castes and clans were thus. My life spans were thus. My meals were thus. My pains and pleasures were thus. I was born there from here, and I was born here from there .’ Whatever various aspects there were, they recollect their own past lives and the events of innumerable eons. Day and night, they’re constantly aware of past times they’ve passed through. ‘Here was form. Here was formlessness. Here was conception. Here was no conception. Here there was neither [conception nor] no conception.’ They fully recollect and fully know it.
 {:#p35}
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
 
-36\. “The Dharma that the Tathāgata teaches has another superiority, which is the knowledge of the heavenly eye. The knowledge of the heavenly eye refers to this: Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they observe sentient beings as they die and are born. These beings have good forms and bad forms, good destinations and bad destinations, and are beautiful or ugly depending on their actions. They fully see and fully know them.
+36\. “The Dharma that the Tathāgata teaches has another superiority, which is the knowledge of the heavenly eye. The knowledge of the heavenly eye refers to this: Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they observe sentient beings as they die and are born. These beings have good forms and bad forms, good destinations and bad destinations, and are beautiful or ugly depending on their actions. They fully see and fully know them.
 {:#p36}
 
 37\. “Some sentient beings do bad physical actions, bad verbal actions, and bad mental actions. They slander the noble ones, believe wrong and mistaken views, and fall to the three bad destinies when their bodies break up and their lives end.
@@ -158,7 +158,7 @@ He replied, “I don’t know them.”
 
 “This Dharma is unsurpassed, his wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could they surpass him?
 
-39\. “The Dharma that the Tathāgata teaches has another superiority, which is the realization of his miraculous abilities. The realization of miraculous abilities refers to this: Ascetics and priests use various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they perform innumerable miraculous powers. They can make one body become innumerable bodies and combine innumerable bodies into one body. Stone walls are no obstacle to them, and they can sit cross-legged in the sky like a bird flying. They enter and exit the earth as though it were water and walk on water as though it were land. Their bodies produce smoke and fire like flames burning timber. They touch the sun and moon with their hand and stand as high as the Brahma Heaven.
+39\. “The Dharma that the Tathāgata teaches has another superiority, which is the realization of his miraculous abilities. The realization of miraculous abilities refers to this: Ascetics and priests use various methods to enter a fixed  <em>samādhi</em> of mind. Following that  <em>samādhi</em> of mind, they perform innumerable miraculous powers. They can make one body become innumerable bodies and combine innumerable bodies into one body. Stone walls are no obstacle to them, and they can sit cross-legged in the sky like a bird flying. They enter and exit the earth as though it were water and walk on water as though it were land. Their bodies produce smoke and fire like flames burning timber. They touch the sun and moon with their hand and stand as high as the Brahma Heaven.
 {:#p39}
 
 40\. “If ascetics and priests declare these miraculous abilities, the response to them should be: ‘There are these miraculous abilities; it’s not that they don’t exist. These miraculous abilities are crude and inferior, something practiced by ordinary men. They aren’t cultivated by noble people.
