--- a/01_agama/dirgha/DA_25.md
+++ b/01_agama/dirgha/DA_25.md
@@ -41,7 +41,7 @@ next: DA_26.html
 10\. “Kāśyapa, there’s a path and a way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’ Kāśyapa, what is the path and what is the way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline’?
 {:#p10}
 
-11\. “Kāśyapa, a monk cultivates the awakening factor of mindfulness based on stopping, lack of desire, and escape. He cultivates the awakening factor of the teaching … effort … joy … calm … samādhi … equanimity based on stopping, lack of desire, and escape. Kāśyapa, this is the path and the way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’”
+11\. “Kāśyapa, a monk cultivates the awakening factor of mindfulness based on stopping, lack of desire, and escape. He cultivates the awakening factor of [analyzing] the teaching … effort … joy … calm …  <em>samādhi</em> … equanimity based on stopping, lack of desire, and escape. Kāśyapa, this is the path and the way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’”
 {:#p11}
 
 12\. Kāśyapa said, “Gautama, there’s only this path and this way that a monk cultivates, and then he himself knows and sees: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’ It’s only the dirty ascetic practices that make it possible to be named a priest or an ascetic. What dirty ascetic practices make it possible to be named a priest or an ascetic?
@@ -89,7 +89,7 @@ Kāśyapa said, “Gautama, although you say this completion of precepts and com
 
 Kāśyapa said, “Very well, Gautama. I’d be glad to hear it.”
 
-25\. The Buddha said, “Kāśyapa, with samādhi of mind, a monk … attains the three insights, destroys the darkness of delusions, and produces the light of wisdom. This is called producing the knowledge that the contaminants have ended. Why is that? These things are a result of diligence, focused attention, not being forgetful, delighting in quiet seclusion, and not being self-indulgent. Kāśyapa, this is called an ascetic or priest whose precepts and views are complete, and who’s superior, higher, fine, and supreme.”
+25\. The Buddha said, “Kāśyapa, with  <em>samādhi</em> of mind, a monk … attains the three insights, destroys the darkness of delusions, and produces the light of wisdom. This is called producing the knowledge that the contaminants have ended. Why is that? These things are a result of diligence, focused attention, not being forgetful, delighting in quiet seclusion, and not being self-indulgent. Kāśyapa, this is called an ascetic or priest whose precepts and views are complete, and who’s superior, higher, fine, and supreme.”
 {:#p25}
 
 Kāśyapa said, “Gautama, although you say this is an ascetic or priest whose views and precepts are complete and who’s higher, superior, fine, and supreme, it’s only being an ascetic or priest that’s exceedingly difficult. It’s exceedingly difficult! An ascetic is also hard to know, and a priest is also hard to know.”
@@ -102,7 +102,7 @@ Kāśyapa said, “Gautama, although you say this is an ascetic or priest whose 
 
 Kāśyapa said, “Gautama, who hasn’t Gautama made rejoice greatly, attain pure faith, make offerings, and praise him? Now, Gautama has made me rejoice, attain pure faith, make offerings, and praise him. I take refuge in Gautama.”
 
-28\. The Buddha told Kāśyapa, “Those precepts possessed by the world don’t possess or accompany the higher precepts, and the rest. How could they want to produce anything higher? They possess samādhi, wisdom, and liberation, and have seen the liberation of wisdom, but they don’t possess or accompany these higher samādhi, wisdom, liberation, and seeing the liberation of wisdom. How could they want to produce anything higher?
+28\. The Buddha told Kāśyapa, “Those precepts possessed by the world don’t possess or accompany the higher precepts, and the rest. How could they want to produce anything higher? They possess  <em>samādhi</em>, wisdom, and liberation, and have seen the liberation of wisdom, but they don’t possess or accompany these higher  <em>samādhi</em>, wisdom, liberation, and seeing the liberation of wisdom. How could they want to produce anything higher?
 {:#p28}
 
 29\. “Kāśyapa, the Tathāgata, Arhat, and Completely Awakened One is a lion. When he teaches the Dharma in detail to a great assembly, he’s sovereign and fearless, so he’s called a lion.
