Added SA 3.11 and 3.12

--- a/01_agama/samyukta/03/SA3_10.md
+++ b/01_agama/samyukta/03/SA3_10.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 3. Dependent Origination | 3.10 (292). Thinking
 type: kramdown
 base: ../../../
 previous: SA3_9.html
-next: SA3_26.html
+next: SA3_11.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
@@ -100,7 +100,7 @@ next: SA3_26.html
 </ol>
 <hr/>
 
-<p class="translator">Translator: Charles Patton</p>
+<p class="translator">Translator: Dōgen Sīṁsāpa (draft) and Charles Patton (editor)</p>
 <p class='revised'>Last Revised: 4 October 2025</p>
 
 <hr/>
