missing quotation mark

--- a/01_agama/samyukta/03/SA3_12.md
+++ b/01_agama/samyukta/03/SA3_12.md
@@ -35,7 +35,7 @@ next: SA3_26.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.84a14'>「若黠慧者無明所覆，愛緣所繫，得此識身。 彼無明斷，愛緣盡。 無明斷，愛緣盡故，身壞命終，更不復受。 不更受故，得解脫生、老、病、死、憂、悲、惱、苦。 所以者何？ 彼先修梵行，正向盡苦，究竟苦邊故。 是故彼身壞命終，更不復受。 更不受故，得解脫生、老、病、死、憂、悲、惱、苦。 是名凡夫及黠慧者，彼於我所修諸梵行，種種差別。」</td>
-    <td id='p5'>5. “If a wise person is shrouded by ignorance and bound by the conditioning of craving, they will obtain this body of awareness. Their ignorance is stopped and their conditioning of craving is ended. Because their ignorance stops and their conditioning of craving ends, they won’t receive another [body] when their body breaks up and their life ends. Because they won’t receive another [body], they are liberated from birth, old age, illness, death, sorrow, lamentation, pain, and trouble. Why is that? Because they were already cultivating the religious practice and were correctly headed to the end of suffering and the final limit of suffering. Therefore, when their body broke up and their life ended, they didn’t receive another [body]. Because they didn’t receive another [body], they were liberated from birth, old age, illness, death, sorrow, lamentation, pain, and trouble. These are called the various differences between an ordinary man and a wise person who cultivates this religious practice of mine.</td>
+    <td id='p5'>5. “If a wise person is shrouded by ignorance and bound by the conditioning of craving, they will obtain this body of awareness. Their ignorance is stopped and their conditioning of craving is ended. Because their ignorance stops and their conditioning of craving ends, they won’t receive another [body] when their body breaks up and their life ends. Because they won’t receive another [body], they are liberated from birth, old age, illness, death, sorrow, lamentation, pain, and trouble. Why is that? Because they were already cultivating the religious practice and were correctly headed to the end of suffering and the final limit of suffering. Therefore, when their body broke up and their life ended, they didn’t receive another [body]. Because they didn’t receive another [body], they were liberated from birth, old age, illness, death, sorrow, lamentation, pain, and trouble. These are called the various differences between an ordinary man and a wise person who cultivates this religious practice of mine.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.84a21'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
